[ADD] z-index and fixed position in header

--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,17 @@ body{
     font-family: sans-serif;
 }
 
+main{
+    padding-top: 60px;
+}
+
 /* header */
 
 header{
     background-color: white;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
 }
 
 .head-container{
